# OpenGL

./: CMakeLists.txt
DGERendering/: CMakeLists.txt
DGERendering/include/DGERendering/Core/: Shader.h
DGERendering/src/Core/: Shader.cpp
Example/: CMakeLists.txt
Example/2.lighting/2.1.basic_lighting_diffuse/: basic_lighting_diffuse.cpp
Example/one/: CMakeLists.txt  lesson_shader.cpp  lesson_texture.cpp  lesson_texture_exerices2.cpp  lesson_textures_combined.cpp
Example/test/: 2DTest.cpp
